correction white spaces

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
   margin: 0 auto;
-  font-family: 'Poppins','Roboto','Crete Round', sans-serif;
   background-color: #1c1a19;
   background-size: cover;
 }
@@ -92,9 +91,8 @@ body {
   margin-right: 0.95rem;
 }
 
-@media screen and (min-width: 375px) 
-{
-
+@media screen and (min-width: 375px)
+ {
   .homeContent {
     padding-left: 6%;
     padding-right: 6%;
@@ -130,9 +128,8 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) 
-{
-
+@media screen and (min-width: 768px)
+ {
   .homeContent {
     padding-top: 30px;
     background-image: url(./images/Illustration-header.png);
